# lantis

./: .gitignore  README.md  default.nix  lantis.cabal  main.hs  release.nix  shell.nix
data/issue/: 1  1.yaml  10  10.yaml  11  11.yaml  12  12.yaml  13  13.yaml  14  14.yaml  15  15.yaml  16  16.yaml  17  17.yaml  18  18.yaml  19  19.yaml  2  2.yaml  20  20.yaml  21  21.yaml  22  22.yaml  23  23.yaml  24  24.yaml  25  25.yaml  26  26.yaml  27  27.yaml  (+68 more)
data/project/: 1  1.yaml  2  2.yaml  3  3.yaml
data/user/: 1  3  4  5  6
draft/: projects.html
examples/: 2  3  examplePerson  issue  person  project  test
src/: Environment.hs  IO.hs  Markup.hs  Model.hs  Parse.hs  Routes.hs  Testing.hs  Tools.hs  Util.hs  main.hs
webroot/css/: lantis.css
webroot/js/: lantis.js
